--- a/lane-marking/laneMarking.ipynb
+++ b/lane-marking/laneMarking.ipynb
@@ -24,7 +24,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Size of an image is:  (540, 960, 3)\n"
+      "Size of an image is:  (540, 960, 3)\n",
+      "<class 'numpy.ndarray'>\n"
      ]
     },
     {
@@ -42,6 +43,7 @@
     "## reading an image\n",
     "image = mpimg.imread('exit-ramp.jpg')\n",
     "print(\"Size of an image is: \",image.shape)\n",
+    "print(type(image))\n",
     "plt.imshow(image)\n",
     "plt.show()"
    ]
@@ -155,7 +157,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fa3648c03a0>"
+       "<matplotlib.image.AxesImage at 0x7f1c2c3bdc10>"
       ]
      },
      "execution_count": 5,
@@ -194,7 +196,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fa360497250>"
+       "<matplotlib.image.AxesImage at 0x7f1c28791be0>"
       ]
      },
      "execution_count": 6,
@@ -238,7 +240,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fa3603efe20>"
+       "<matplotlib.image.AxesImage at 0x7f1c286f6820>"
       ]
      },
      "execution_count": 7,
@@ -300,7 +302,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fa364964070>"
+       "<matplotlib.image.AxesImage at 0x7f1c2c3fadf0>"
       ]
      },
      "execution_count": 8,
@@ -332,7 +334,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fa364a251f0>"
+       "<matplotlib.image.AxesImage at 0x7f1c2c47bc70>"
       ]
      },
      "execution_count": 9,
@@ -377,17 +379,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "ee4dce81",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fa3603da4f0>"
+       "<matplotlib.image.AxesImage at 0x7f1c28584070>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -405,6 +407,7 @@
    "source": [
     "# join the result of canny_edges and mask_image\n",
     "masked_edges = cv2.bitwise_and(canny_edges_image, mask_image)\n",
+    "# plt.imshow(masked_edges)\n",
     "\n",
     "# define new Hough transform parameters\n",
     "rho = 2\n",
