Added README.md file

--- a/lane-marking/laneMarking.ipynb
+++ b/lane-marking/laneMarking.ipynb
@@ -157,7 +157,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f1c2c3bdc10>"
+       "<matplotlib.image.AxesImage at 0x7f169cbe20d0>"
       ]
      },
      "execution_count": 5,
@@ -196,7 +196,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f1c28791be0>"
+       "<matplotlib.image.AxesImage at 0x7f16987a9f10>"
       ]
      },
      "execution_count": 6,
@@ -240,7 +240,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f1c286f6820>"
+       "<matplotlib.image.AxesImage at 0x7f169870bac0>"
       ]
      },
      "execution_count": 7,
@@ -302,7 +302,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f1c2c3fadf0>"
+       "<matplotlib.image.AxesImage at 0x7f169cc18700>"
       ]
      },
      "execution_count": 8,
@@ -334,7 +334,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f1c2c47bc70>"
+       "<matplotlib.image.AxesImage at 0x7f169cd4bb80>"
       ]
      },
      "execution_count": 9,
@@ -379,17 +379,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "ee4dce81",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f1c28584070>"
+       "<matplotlib.image.AxesImage at 0x7f1698676850>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -407,7 +407,6 @@
    "source": [
     "# join the result of canny_edges and mask_image\n",
     "masked_edges = cv2.bitwise_and(canny_edges_image, mask_image)\n",
-    "# plt.imshow(masked_edges)\n",
     "\n",
     "# define new Hough transform parameters\n",
     "rho = 2\n",
@@ -430,14 +429,6 @@
     "lane_edge = cv2.addWeighted(canny_edges_image_col,0.8,line_image,1,0)\n",
     "plt.imshow(lane_edge)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c8ca1bd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
