Added test_videos processVideo.py output_video  Modified lanemarking.py

--- a/lane-marking/laneMarking.ipynb
+++ b/lane-marking/laneMarking.ipynb
@@ -157,7 +157,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f169cbe20d0>"
+       "<matplotlib.image.AxesImage at 0x7f4846d72c70>"
       ]
      },
      "execution_count": 5,
@@ -196,7 +196,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f16987a9f10>"
+       "<matplotlib.image.AxesImage at 0x7f484414ab80>"
       ]
      },
      "execution_count": 6,
@@ -240,7 +240,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f169870bac0>"
+       "<matplotlib.image.AxesImage at 0x7f48440af7c0>"
       ]
      },
      "execution_count": 7,
@@ -302,7 +302,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f169cc18700>"
+       "<matplotlib.image.AxesImage at 0x7f4846e010d0>"
       ]
      },
      "execution_count": 8,
@@ -334,7 +334,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f169cd4bb80>"
+       "<matplotlib.image.AxesImage at 0x7f4846eed9d0>"
       ]
      },
      "execution_count": 9,
@@ -379,17 +379,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "ee4dce81",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f1698676850>"
+       "<matplotlib.image.AxesImage at 0x7f483c7d1c10>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -429,6 +429,25 @@
     "lane_edge = cv2.addWeighted(canny_edges_image_col,0.8,line_image,1,0)\n",
     "plt.imshow(lane_edge)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3cbc76de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from moviepy.editor import VideoFileClip\n",
+    "from IPython.display import HTML"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60aadb21",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -448,6 +467,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "fdc2a040071e746b3a49c553a8289fa6838b0a36c36f7b0f5973f311825c9413"
+   }
   }
  },
  "nbformat": 4,
